--- a/template.yaml
+++ b/template.yaml
@@ -40,7 +40,7 @@ Resources:
         Api:
           Type: Api
           Properties:
-            Path: /
+            Path: /quote
             Method: GET
   # Each Lambda function is defined by properties:
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
