--- a/pipeline/buildspec_unit_test.yml
+++ b/pipeline/buildspec_unit_test.yml
@@ -2,8 +2,9 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      python: 3.8
+      nodejs: 14
   build:
     commands:
       # trigger the unit tests here
       - echo 'Running unit tests'
+      - true == true
